Thêm file index.html vào thư mục gốc

--- a/introduce/introduces.html
+++ b/introduce/introduces.html
@@ -17,7 +17,7 @@
     <header>
         <div class="logo">Hotpot Restaurant</div>
         <nav class="navigation">
-            <a href="/home/home.html">Trang chủ</a>
+            <a href="/index.html">Trang chủ</a>
             <a href="/introduce/introduces.html">Giới thiệu</a>
             <a href="/service/service web/service.html">Dịch vụ</a>
             <a href="/menu/sanphammoi.html">Sản phẩm</a>
