--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <header>
         <div class="logo">Hotpot Restaurant</div>
         <nav class="navigation">
-            <a href="/index.html">Trang chủ</a>
-            <a href="/introduce/introduces.html">Giới thiệu</a>
-            <a href="/service/service web/service.html">Dịch vụ</a>
-            <a href="/menu/sanphammoi.html">Sản phẩm</a>
-            <a href="/new/news/news.html">Tin tức</a>
-            <a href="/contact/contact.html">Liên hệ</a>
+            <a href="index.html">Trang chủ</a>
+            <a href="introduce/introduces.html">Giới thiệu</a>
+            <a href="service/service web/service.html">Dịch vụ</a>
+            <a href="menu/sanphammoi.html">Sản phẩm</a>
+            <a href="new/news/news.html">Tin tức</a>
+            <a href="contact/contact.html">Liên hệ</a>
         </nav>
         <button class="order"><a href="/menu/sanphammoi.html">Order Food</a></button>
         <label for="nav-toggle" class="list">☰</label>
