--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <header>
         <div class="logo">Hotpot Restaurant</div>
         <nav class="navigation">
-            <a href="index.html">Trang chủ</a>
-            <a href="introduce/introduces.html">Giới thiệu</a>
-            <a href="service/service web/service.html">Dịch vụ</a>
-            <a href="menu/sanphammoi.html">Sản phẩm</a>
-            <a href="new/news/news.html">Tin tức</a>
-            <a href="contact/contact.html">Liên hệ</a>
+            <a href="/WebsiteRestaurant/index.html">Trang chủ</a>
+            <a href="/WebsiteRestaurant/introduce/introduces.html">Giới thiệu</a>
+            <a href="/WebsiteRestaurant/service/service web/service.html">Dịch vụ</a>
+            <a href="/WebsiteRestaurant/menu/sanphammoi.html">Sản phẩm</a>
+            <a href="/WebsiteRestaurant/new/news/news.html">Tin tức</a>
+            <a href="/WebsiteRestaurant/contact/contact.html">Liên hệ</a>
         </nav>
-        <button class="order"><a href="/menu/sanphammoi.html">Order Food</a></button>
+        <button class="order"><a href="/WebsiteRestaurant/menu/sanphammoi.html">Order Food</a></button>
         <label for="nav-toggle" class="list">☰</label>
     </header>
 
@@ -46,8 +46,8 @@
         <h2>Sản phẩm ưa chuộng</h2>
         <div class="menu-grid">
             <div class="menu-product">
-                <a href="/menu/sanphammoi.html#lau-bo-nhung-giam">
-                    <img src="/images/image_lau/laubonhunggiam.jpeg" height="200px">
+                <a href="/WebsiteRestaurant/menu/sanphammoi.html#lau-bo-nhung-giam">
+                    <img src="/WebsiteRestaurant/images/image_lau/laubonhunggiam.jpeg" height="200px">
                     <div class="menu-product-content">
                         <h3>Lẩu bò nhúng giấm</h3>
                         <p>Nước dùng thanh nhẹ hương vị giấm, bò tươi thơm ngon</p>
@@ -57,8 +57,8 @@
             </div>
 
             <div class="menu-product">
-                <a href="/menu/sanphammoi.html#ga-nuong-muoi-ot">
-                    <img src="/images/image_maindish/ga-nuong-muoi-ot.png" height="200px">
+                <a href="/WebsiteRestaurant/menu/sanphammoi.html#ga-nuong-muoi-ot">
+                    <img src="/WebsiteRestaurant/images/image_maindish/ga-nuong-muoi-ot.png" height="200px">
                     <div class="menu-product-content">
                         <h3>Gà nướng muối ớt</h3>
                         <p>Thịt gà mềm, mọng nước được quết bên ngoài 1 lớp muối ớt làm dậy lên hương vị cay </p>
@@ -68,8 +68,8 @@
             </div>
 
             <div class="menu-product">
-                <a href="/menu/sanphammoi.html#cha-gio-hai-san">
-                    <img src="/images/image_sidedish/huong-dan-lam-cha-gio-hai-san-chien-xu-sot-mayonnaise.jpg"
+                <a href="/WebsiteRestaurant/menu/sanphammoi.html#cha-gio-hai-san">
+                    <img src="/WebsiteRestaurant/images/image_sidedish/huong-dan-lam-cha-gio-hai-san-chien-xu-sot-mayonnaise.jpg"
                         height="200px">
                     <div class="menu-product-content">
                         <h3>Chả giò hải sản</h3>
@@ -80,8 +80,8 @@
             </div>
 
             <div class="menu-product">
-                <a href="/menu/sanphammoi.html#tom-hap-dua">
-                <img src="/images/image_maindish/tom-hap-dua.jpg" height="200px">
+                <a href="/WebsiteRestaurant/menu/sanphammoi.html#tom-hap-dua">
+                <img src="/WebsiteRestaurant/images/image_maindish/tom-hap-dua.jpg" height="200px">
                 <div class="menu-product-content">
                     <h3>Tôm hấp dừa</h3>
                     <p>Tôm rất mềm, ngọt thịt, đặc biệt là hấp cùng với nước dừa càng làm tăng vị ngon ngọt của thịt tôm
@@ -92,8 +92,8 @@
             </div>
 
             <div class="menu-product">
-                <a href="/menu/sanphammoi.html#cha-gio">
-                <img src="/images/image_sidedish/cha-gio-viet-nam-1.jpg" height="200px">
+                <a href="/WebsiteRestaurant/menu/sanphammoi.html#cha-gio">
+                <img src="/WebsiteRestaurant/images/image_sidedish/cha-gio-viet-nam-1.jpg" height="200px">
                 <div class="menu-product-content">
                     <h3>Chả giò</h3>
                     <p>Chả giò vàng ươm, giòn tan rất hấp dẫn. Nhân chả giò đầy đặn, ăn hoài cũng không ngán</p>
@@ -103,8 +103,8 @@
             </div>
 
             <div class="menu-product">
-                <a href="/menu/sanphammoi.html#goi-hai-san">
-                <img src="/images/image_sidedish/goi-hai-san.webp" height="200px">
+                <a href="/WebsiteRestaurant/menu/sanphammoi.html#goi-hai-san">
+                <img src="/WebsiteRestaurant/images/image_sidedish/goi-hai-san.webp" height="200px">
                 <div class="menu-product-content">
                     <h3>Gỏi hải sản</h3>
                     <p>Gỏi hải sản tươi ngon, hòa quyện vị chua ngọt đậm đà của nước sốt chua cay ngọt dịu</p>
