--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div class="testimonials-carousel">
 
             <div class="testimonials-items">
-                <img src="/images/customer-img/SonTungMTP.webp" alt="Sơn Tùng MTP" class="avatar" height="300px">
+                <img src="/WebsiteRestaurant/images/customer-img/SonTungMTP.webp" alt="Sơn Tùng MTP" class="avatar" height="300px">
                 <h4>Sơn Tùng MTP</h4>
                 <p>"Món ăn ngon tuyệt, không gian ấm cúng, rất đáng thử!"</p>
                 <div class="icon-stars">
@@ -135,7 +135,7 @@
             </div>
 
             <div class="testimonials-items">
-                <img src="/images/customer-img/môn.jpg" alt="Mono" class="avatar" height="300px">
+                <img src="/WebsiteRestaurant/images/customer-img/môn.jpg" alt="Mono" class="avatar" height="300px">
                 <h4>Mono</h4>
                 <p>"Món lẩu ngon lắm ấy và cả món gà nữa cơ, tuyệt vời"</p>
                 <div class="icon-stars">
@@ -147,7 +147,7 @@
                 </div>
             </div>
             <div class="testimonials-items">
-                <img src="/images/customer-img/22.jpg" alt="ISSAC" class="avatar" height="300px">
+                <img src="/WebsiteRestaurant/images/customer-img/22.jpg" alt="ISSAC" class="avatar" height="300px">
                 <h4>ISSAC</h4>
                 <p>"Món ăn ngon lắm, rất đáng thử nha mọi người!"</p>
                 <div class="icon-stars">
