--- a/contact/contact.html
+++ b/contact/contact.html
@@ -11,24 +11,24 @@
 
 <body>
   <input type="checkbox" id="nav-toggle">
-  <header>
-      <div class="logo">Hotpot Restaurant</div>
-      <nav class="navigation">
-          <a href="/index.html">Trang chủ</a>
-          <a href="/introduce/introduces.html">Giới thiệu</a>
-          <a href="/service/service web/service.html">Dịch vụ</a>
-          <a href="/menu/sanphammoi.html">Sản phẩm</a>
-          <a href="/new/news/news.html">Tin tức</a>
-          <a href="/contact/contact.html">Liên hệ</a>
-      </nav>
-      <button class="order"><a href="/menu/sanphammoi.html">Order Food</a></button>
-      <label for="nav-toggle" class="list">☰</label>
-  </header>
+    <header>
+        <div class="logo">Hotpot Restaurant</div>
+        <nav class="navigation">
+            <a href="/WebsiteRestaurant/index.html">Trang chủ</a>
+            <a href="/WebsiteRestaurant/introduce/introduces.html">Giới thiệu</a>
+            <a href="/WebsiteRestaurant/service/service web/service.html">Dịch vụ</a>
+            <a href="/WebsiteRestaurant/menu/sanphammoi.html">Sản phẩm</a>
+            <a href="/WebsiteRestaurant/new/news/news.html">Tin tức</a>
+            <a href="/WebsiteRestaurant/contact/contact.html">Liên hệ</a>
+        </nav>
+        <button class="order"><a href="/WebsiteRestaurant/menu/sanphammoi.html">Order Food</a></button>
+        <label for="nav-toggle" class="list">☰</label>
+    </header>
 
 
     <section class="main-contact">
         <div class="main-image">
-            <img src="/images/contact-img/thiet-ke-nha-hang-lau-nuong-1.jpg" alt="Nhà hàng">
+            <img src="/WebsiteRestaurant/images/contact-img/thiet-ke-nha-hang-lau-nuong-1.jpg" alt="Nhà hàng">
         </div>
         <div class="main-text">
             <h3>ĐỊA CHỈ RESTAURANT</h3>
