--- a/introduce/introduces.html
+++ b/introduce/introduces.html
@@ -17,21 +17,21 @@
     <header>
         <div class="logo">Hotpot Restaurant</div>
         <nav class="navigation">
-            <a href="/index.html">Trang chủ</a>
-            <a href="/introduce/introduces.html">Giới thiệu</a>
-            <a href="/service/service web/service.html">Dịch vụ</a>
-            <a href="/menu/sanphammoi.html">Sản phẩm</a>
-            <a href="/new/news/news.html">Tin tức</a>
-            <a href="/contact/contact.html">Liên hệ</a>
+            <a href="/WebsiteRestaurant/index.html">Trang chủ</a>
+            <a href="/WebsiteRestaurant/introduce/introduces.html">Giới thiệu</a>
+            <a href="/WebsiteRestaurant/service/service web/service.html">Dịch vụ</a>
+            <a href="/WebsiteRestaurant/menu/sanphammoi.html">Sản phẩm</a>
+            <a href="/WebsiteRestaurant/new/news/news.html">Tin tức</a>
+            <a href="/WebsiteRestaurant/contact/contact.html">Liên hệ</a>
         </nav>
-        <button class="order"><a href="/menu/sanphammoi.html">Order Food</a></button>
+        <button class="order"><a href="/WebsiteRestaurant/menu/sanphammoi.html">Order Food</a></button>
         <label for="nav-toggle" class="list">☰</label>
     </header>
 
     <section class="restaurant-info">
         <div class="info-content">
             <div class="about-us-image">
-                <img src="images/thiet-ke-nha-hang-lau-nuong09-1.jpg" alt="Nhà hàng của chúng tôi">
+                <img src="/WebsiteRestaurant/images/thiet-ke-nha-hang-lau-nuong09-1.jpg" alt="Nhà hàng của chúng tôi">
             </div>
             <div class="info-text">
                 <h2>Về Nhà Hàng Của Chúng Tôi</h2>
@@ -51,7 +51,7 @@
     <section class="restaurant-info reverse">
         <div class="info-content">
             <div class="about-us-image">
-                <img src="images/20-mon-lau-ngon-cuoi-tuan.jpg" alt="Sứ mệnh">
+                <img src="/WebsiteRestaurant/images/20-mon-lau-ngon-cuoi-tuan.jpg" alt="Sứ mệnh">
             </div>
             <div class="info-text">
                 <h2>Sứ Mệnh</h2>
@@ -74,7 +74,7 @@
     <section class="restaurant-info">
         <div class="info-content">
             <div class="about-us-image">
-                <img src="images/thiet-ke-nha-hang-lau-nuong-43.jpg" Không gian nhà hàng">
+                <img src="/WebsiteRestaurant/images/thiet-ke-nha-hang-lau-nuong-43.jpg" Không gian nhà hàng">
             </div>
             <div class="info-text">
                 <h2>Không Gian</h2>
@@ -95,7 +95,7 @@
     <section class="restaurant-info reverse">
         <div class="info-content">
             <div class="about-us-image">
-                <img src="images/gioithieu(3).jpg" alt="Dịch vụ">
+                <img src="/WebsiteRestaurant/images/gioithieu(3).jpg" alt="Dịch vụ">
             </div>
             <div class="info-text">
                 <h2>Dịch Vụ</h2>
