--- a/menu/sanphammoi.html
+++ b/menu/sanphammoi.html
@@ -12,19 +12,19 @@
 <body>
 
   <input type="checkbox" id="nav-toggle">
-  <header>
-      <div class="logo">Hotpot Restaurant</div>
-      <nav class="navigation">
-          <a href="/index.html">Trang chủ</a>
-          <a href="/introduce/introduces.html">Giới thiệu</a>
-          <a href="/service/service web/service.html">Dịch vụ</a>
-          <a href="/menu/sanphammoi.html">Sản phẩm</a>
-          <a href="/new/news/news.html">Tin tức</a>
-          <a href="/contact/contact.html">Liên hệ</a>
-      </nav>
-      <button class="order"><a href="/menu/sanphammoi.html">Order Food</a></button>
-      <label for="nav-toggle" class="list">☰</label>
-  </header>
+    <header>
+        <div class="logo">Hotpot Restaurant</div>
+        <nav class="navigation">
+            <a href="/WebsiteRestaurant/index.html">Trang chủ</a>
+            <a href="/WebsiteRestaurant/introduce/introduces.html">Giới thiệu</a>
+            <a href="/WebsiteRestaurant/service/service web/service.html">Dịch vụ</a>
+            <a href="/WebsiteRestaurant/menu/sanphammoi.html">Sản phẩm</a>
+            <a href="/WebsiteRestaurant/new/news/news.html">Tin tức</a>
+            <a href="/WebsiteRestaurant/contact/contact.html">Liên hệ</a>
+        </nav>
+        <button class="order"><a href="/WebsiteRestaurant/menu/sanphammoi.html">Order Food</a></button>
+        <label for="nav-toggle" class="list">☰</label>
+    </header>
 
   <div class="toanboweb">
     <div class="danhsach">
@@ -49,7 +49,7 @@
           <div class="sanpham-container">
             <div class="sanpham" data-category="category2" data-price="69000" id="laumam">
               <div class="front">
-                <img src="lau/110724-lau-mam-mien-tay-cung-buffet-poseidon-1-1.jpg" alt="launam">
+                <img src="/WebsiteRestaurant/menu/lau/110724-lau-mam-mien-tay-cung-buffet-poseidon-1-1.jpg" alt="launam">
                 <h3>Lẩu mắm</h3>
                 <div class="price">158.000 VND</div>
               </div>
@@ -67,7 +67,7 @@
           <div class="sanpham-container">
             <div class="sanpham" data-category="category2" data-price="188000">
               <div class="front">
-                <img src="lau/lauthaihaisan.jpg" alt="lauthaihaisan">
+                <img src="/WebsiteRestaurant/menu/lau/lauthaihaisan.jpg" alt="lauthaihaisan">
                 <h3>Lẩu thái hải sản</h3>
                 <div class="price">168.000 VND</div>
               </div>
@@ -84,7 +84,7 @@
           <div class="sanpham-container">
             <div class="sanpham" data-category="category2" data-price="155000">
               <div class="front">
-                <img src="lau/laucaduoimangchua.jpg" alt="laucaduoi">
+                <img src="/WebsiteRestaurant/menu/lau/laucaduoimangchua.jpg" alt="laucaduoi">
                 <h3>Lẩu cá đuối</h3>
                 <div class="price">155.000 VND</div>
               </div>
@@ -101,7 +101,7 @@
           <div class="sanpham-container">
             <div class="sanpham" data-category="category2" data-price="134000">
               <div class="front">
-                <img src="lau/laugalae.jpg" alt="laugalae">
+                <img src="/WebsiteRestaurant/menu/lau/laugalae.jpg" alt="laugalae">
                 <h3>Lẩu gà lá é</h3>
                 <div class="price">134.000 VND</div>
               </div>
@@ -118,7 +118,7 @@
           <div class="sanpham-container">
             <div class="sanpham" data-category="category2" data-price="163000">
               <div class="front">
-                <img src="lau/laugaothiem.jpg" alt="laugaothiem">
+                <img src="/WebsiteRestaurant/menu/lau/laugaothiem.jpg" alt="laugaothiem">
                 <h3>Lẩu gà ớt hiểm</h3>
                 <div class="price">163.000 VND</div>
               </div>
@@ -135,7 +135,7 @@
           <div class="sanpham-container">
             <div class="sanpham" data-category="category1" data-price="120000" id="lau-bo-nhung-giam">
               <div class="front">
-                <img src="/menu/lau/laubonhunggiam.jpeg" alt="laubonhunggiam">
+                <img src="/WebsiteRestaurant/menu/lau/laubonhunggiam.jpeg" alt="laubonhunggiam">
                 <h3>Lẩu bò nhúng giấm</h3>
                 <div class="price">175.000 VND</div>
               </div>
@@ -152,7 +152,7 @@
           <div class="sanpham-container">
             <div class="sanpham" data-category="category4" data-price="20000">
               <div class="front">
-                <img src="khaivi/Cach-lam-banh-xep-chien-bang-noi-chien-khong-dau-5.jpg" alt="bet">
+                <img src="/WebsiteRestaurant/menu/khaivi/Cach-lam-banh-xep-chien-bang-noi-chien-khong-dau-5.jpg" alt="bet">
                 <h3>Bánh xếp</h3>
                 <div class="price">20.000 VND</div>
               </div>
@@ -169,7 +169,7 @@
           <div class="sanpham-container">
             <div class="sanpham" data-category="category4" data-price="25000" id="cha-gio-hai-san">
               <div class="front">
-                <img src="khaivi/sddefault.jpg" alt="chagiohaisan">
+                <img src="/WebsiteRestaurant/menu/khaivi/sddefault.jpg" alt="chagiohaisan">
                 <h3>Chả giò hải sản</h3>
                 <div class="price">37.000 VND</div>
               </div>
@@ -186,7 +186,7 @@
           <div class="sanpham-container">
             <div class="sanpham" data-category="category4" data-price="20000" id="cha-gio">
               <div class="front">
-                <img src="khaivi/cha-gio-viet-nam-1.jpg" alt="chagiothitbam">
+                <img src="/WebsiteRestaurant/menu/khaivi/cha-gio-viet-nam-1.jpg" alt="chagiothitbam">
                 <h3>Chả giò thịt bằm</h3>
                 <div class="price">20.000 VND</div>
               </div>
@@ -203,7 +203,7 @@
           <div class="sanpham-container">
             <div class="sanpham" data-category="category4" data-price="79000" id="goi-hai-san">
               <div class="front">
-                <img src="khaivi/goi-hai-san.webp" alt="goihaisan">
+                <img src="/WebsiteRestaurant/menu/khaivi/goi-hai-san.webp" alt="goihaisan">
                 <h3>Gỏi hải sản</h3>
                 <div class="price">97.000 VND</div>
               </div>
@@ -220,7 +220,7 @@
           <div class="sanpham-container">
             <div class="sanpham" data-category="category4" data-price="30000">
               <div class="front">
-                <img src="khaivi/khoai-tay-chien-.jpg" alt="khoaitaychien">
+                <img src="/WebsiteRestaurant/menu/khaivi/khoai-tay-chien-.jpg" alt="khoaitaychien">
                 <h3>Khoai tây chiên</h3>
                 <div class="price">30.000 VND</div>
               </div>
@@ -237,7 +237,7 @@
           <div class="sanpham-container">
             <div class="sanpham" data-category="category4" data-price="40000">
               <div class="front">
-                <img src="khaivi/salad-ca-ngu.jpg" alt="saladcangu">
+                <img src="/WebsiteRestaurant/menu/khaivi/salad-ca-ngu.jpg" alt="saladcangu">
                 <h3>Salad cá ngừ</h3>
                 <div class="price">40.000 VND</div>
               </div>
@@ -254,7 +254,7 @@
           <div class="sanpham-container">
             <div class="sanpham" data-category="category1" data-price="85000">
               <div class="front">
-                <img src="monchinh/bo-sot-tieu-den.jpg" alt="bosottieuden">
+                <img src="/WebsiteRestaurant/menu/monchinh/bo-sot-tieu-den.jpg" alt="bosottieuden">
                 <h3>Bò sốt tiêu đen</h3>
                 <div class="price">85.000 VND</div>
               </div>
@@ -271,7 +271,7 @@
           <div class="sanpham-container">
             <div class="sanpham" data-category="category1" data-price="590000">
               <div class="front">
-                <img src="monchinh/2023_12_15_638382464316943415_ca-thu-kho-tieu-thumb.jpg" alt="cathusottieuxanh">
+                <img src="/WebsiteRestaurant/menu/monchinh/2023_12_15_638382464316943415_ca-thu-kho-tieu-thumb.jpg" alt="cathusottieuxanh">
                 <h3>Cá thu sốt tiêu xanh</h3>
                 <div class="price">200.000 VND</div>
               </div>
@@ -289,7 +289,7 @@
           <div class="sanpham-container">
             <div class="sanpham" data-category="category1" data-price="168000" id="ga-nuong-muoi-ot">
               <div class="front">
-                <img src="monchinh/ga-nuong-muoi-ot.png" alt="ganuongmuoiot">
+                <img src="/WebsiteRestaurant/menu/monchinh/ga-nuong-muoi-ot.png" alt="ganuongmuoiot">
                 <h3>Gà nướng muối ớt</h3>
                 <div class="price">129.000 VND</div>
               </div>
@@ -308,7 +308,7 @@
           <div class="sanpham-container">
             <div class="sanpham" data-category="category1" data-price="130000">
               <div class="front">
-                <img src="monchinh/suonnuongmatong.jpg" alt="suonnuongmatong">
+                <img src="/WebsiteRestaurant/menu/monchinh/suonnuongmatong.jpg" alt="suonnuongmatong">
                 <h3>Sườn nướng mật ong</h3>
                 <div class="price">130.000 VND</div>
               </div>
@@ -325,7 +325,7 @@
           <div class="sanpham-container">
             <div class="sanpham" data-category="category4" data-price="35000">
               <div class="front">
-                <img src="monchinh/sup-cua.jpg" alt="supcua">
+                <img src="/WebsiteRestaurant/menu/monchinh/sup-cua.jpg" alt="supcua">
                 <h3>Súp cua</h3>
                 <div class="price">35.000 VND</div>
               </div>
@@ -342,7 +342,7 @@
           <div class="sanpham-container">
             <div class="sanpham" data-category="category1" data-price="110000" id="tom-hap-dua">
               <div class="front">
-                <img src="monchinh/tom-hap-dua.jpg" alt="tomhapdua">
+                <img src="/WebsiteRestaurant/menu/monchinh/tom-hap-dua.jpg" alt="tomhapdua">
                 <h3>Tôm hấp dừa</h3>
                 <div class="price">107.000 VND</div>
               </div>
@@ -360,7 +360,7 @@
           <div class="sanpham-container">
             <div class="sanpham" data-category="category3" data-price="20000">
               <div class="front">
-                <img src="nuoc/tra_xanh.png" alt="traxanh">
+                <img src="/WebsiteRestaurant/menu/nuoc/tra_xanh.png" alt="traxanh">
                 <h3>Trà xanh</h3>
                 <div class="price">20.000 VND</div>
               </div>
@@ -377,7 +377,7 @@
           <div class="sanpham-container">
             <div class="sanpham" data-category="category3" data-price="20000">
               <div class="front">
-                <img src="nuoc/sting_red.webp" alt="sting">
+                <img src="/WebsiteRestaurant/menu/nuoc/sting_red.webp" alt="sting">
                 <h3>Sting</h3>
                 <div class="price">20.000 VND</div>
               </div>
@@ -394,7 +394,7 @@
           <div class="sanpham-container">
             <div class="sanpham" data-category="category3" data-price="20000">
               <div class="front">
-                <img src="nuoc/coca_cola.webp" alt="cocacola">
+                <img src="/WebsiteRestaurant/menu/nuoc/coca_cola.webp" alt="cocacola">
                 <h3>Coca-cola</h3>
                 <div class="price">20.000 VND</div>
               </div>
@@ -411,7 +411,7 @@
           <div class="sanpham-container">
             <div class="sanpham" data-category="category3" data-price="20000">
               <div class="front">
-                <img src="nuoc/c2.jpg" alt="c2">
+                <img src="/WebsiteRestaurant/menu/nuoc/c2.jpg" alt="c2">
                 <h3>C2</h3>
                 <div class="price">20.000 VND</div>
               </div>
@@ -428,7 +428,7 @@
           <div class="sanpham-container">
             <div class="sanpham" data-category="category3" data-price="20000">
               <div class="front">
-                <img src="nuoc/beer.webp" alt="beer">
+                <img src="/WebsiteRestaurant/menu/nuoc/beer.webp" alt="beer">
                 <h3>Bia</h3>
                 <div class="price">20.000 VND</div>
               </div>
@@ -445,7 +445,7 @@
           <div class="sanpham-container">
             <div class="sanpham" data-category="category3" data-price="5000">
               <div class="front">
-                <img src="nuoc/aquavina.png" alt="aquavina">
+                <img src="/WebsiteRestaurant/menu/nuoc/aquavina.png" alt="aquavina">
                 <h3>Nước lọc</h3>
                 <div class="price">5.000 VND</div>
               </div>
