--- a/new/web/web2.html
+++ b/new/web/web2.html
@@ -16,20 +16,20 @@
     <header>
         <div class="logo">Hotpot Restaurant</div>
         <nav class="navigation">
-            <a href="/index.html">Trang chủ</a>
-            <a href="/introduce/introduces.html">Giới thiệu</a>
-            <a href="/service/service web/service.html">Dịch vụ</a>
-            <a href="/menu/sanphammoi.html">Sản phẩm</a>
-            <a href="/new/news/news.html">Tin tức</a>
-            <a href="/contact/contact.html">Liên hệ</a>
+            <a href="/WebsiteRestaurant/index.html">Trang chủ</a>
+            <a href="/WebsiteRestaurant/introduce/introduces.html">Giới thiệu</a>
+            <a href="/WebsiteRestaurant/service/service web/service.html">Dịch vụ</a>
+            <a href="/WebsiteRestaurant/menu/sanphammoi.html">Sản phẩm</a>
+            <a href="/WebsiteRestaurant/new/news/news.html">Tin tức</a>
+            <a href="/WebsiteRestaurant/contact/contact.html">Liên hệ</a>
         </nav>
-        <button class="order"><a href="/menu/sanphammoi.html">Order Food</a></button>
+        <button class="order"><a href="/WebsiteRestaurant/menu/sanphammoi.html">Order Food</a></button>
         <label for="nav-toggle" class="list">☰</label>
     </header>
     
     <div class="container">
         <h1> Ra mắt menu hoặc món lẩu mới</h1>
-        <img src="../image/menu.png" alt="menu">
+        <img src="/WebsiteRestaurant/../image/menu.png" alt="menu">
         <p>
             Thưởng Thức Menu Lẩu Mới Tại Hotpot Restaurant
         </p>
