--- a/new/web/web3.html
+++ b/new/web/web3.html
@@ -16,14 +16,14 @@
     <header>
         <div class="logo">Hotpot Restaurant</div>
         <nav class="navigation">
-            <a href="/index.html">Trang chủ</a>
-            <a href="/introduce/introduces.html">Giới thiệu</a>
-            <a href="/service/service web/service.html">Dịch vụ</a>
-            <a href="/menu/sanphammoi.html">Sản phẩm</a>
-            <a href="/new/news/news.html">Tin tức</a>
-            <a href="/contact/contact.html">Liên hệ</a>
+            <a href="/WebsiteRestaurant/index.html">Trang chủ</a>
+            <a href="/WebsiteRestaurant/introduce/introduces.html">Giới thiệu</a>
+            <a href="/WebsiteRestaurant/service/service web/service.html">Dịch vụ</a>
+            <a href="/WebsiteRestaurant/menu/sanphammoi.html">Sản phẩm</a>
+            <a href="/WebsiteRestaurant/new/news/news.html">Tin tức</a>
+            <a href="/WebsiteRestaurant/contact/contact.html">Liên hệ</a>
         </nav>
-        <button class="order"><a href="/menu/sanphammoi.html">Order Food</a></button>
+        <button class="order"><a href="/WebsiteRestaurant/menu/sanphammoi.html">Order Food</a></button>
         <label for="nav-toggle" class="list">☰</label>
     </header>
     
@@ -32,7 +32,7 @@
         <p>
             Vào những ngày thời tiết lạnh lạnh, thèm một nồi lẩu và quây quần bên gia đình, bạn bè, đồng nghiệp cùng sẻ chia những câu chuyện thì còn gì bằng. Cùng tìm hiểu công thức làm lẩu thái đơn giản tại nhà mà ngon ngất ngây.
         </p>
-        <img src="../image/lauthai.png" alt="lauthai">
+        <img src="/WebsiteRestaurant/../image/lauthai.png" alt="lauthai">
         <p>
             Từ lâu, lẩu Thái đã trở thành một món ăn quen thuộc với nền ẩm thực Việt bởi hương vị chua cay, ngọt mặn đầy đủ cùng với những biến tấu ngon không tưởng. Lẩu thái có cách làm vừa đơn giản lại có giá rất bình dân mà lại cực kỳ dễ ăn. Hôm nay, hãy cùng vào bếp với công thức làm lẩu Thái đơn giản tại nhà mà ngon ngất ngây, không thua gì ở tiệm nha.
         </p>
