--- a/service/service web/service.html
+++ b/service/service web/service.html
@@ -10,23 +10,23 @@
 </head>
 <body>
   <input type="checkbox" id="nav-toggle">
-  <header>
-      <div class="logo">Hotpot Restaurant</div>
-      <nav class="navigation">
-          <a href="/index.html">Trang chủ</a>
-          <a href="/introduce/introduces.html">Giới thiệu</a>
-          <a href="/service/service web/service.html">Dịch vụ</a>
-          <a href="/menu/sanphammoi.html">Sản phẩm</a>
-          <a href="/new/news/news.html">Tin tức</a>
-          <a href="/contact/contact.html">Liên hệ</a>
-      </nav>
-      <button class="order"><a href="/menu/sanphammoi.html">Order Food</a></button>
-      <label for="nav-toggle" class="list">☰</label>
-  </header>
+    <header>
+        <div class="logo">Hotpot Restaurant</div>
+        <nav class="navigation">
+            <a href="/WebsiteRestaurant/index.html">Trang chủ</a>
+            <a href="/WebsiteRestaurant/introduce/introduces.html">Giới thiệu</a>
+            <a href="/WebsiteRestaurant/service/service web/service.html">Dịch vụ</a>
+            <a href="/WebsiteRestaurant/menu/sanphammoi.html">Sản phẩm</a>
+            <a href="/WebsiteRestaurant/new/news/news.html">Tin tức</a>
+            <a href="/WebsiteRestaurant/contact/contact.html">Liên hệ</a>
+        </nav>
+        <button class="order"><a href="/WebsiteRestaurant/menu/sanphammoi.html">Order Food</a></button>
+        <label for="nav-toggle" class="list">☰</label>
+    </header>
 
     <div class="section-wrapper bg-gray">
         <div class="container">
-          <img src="../service img/antaicho.png" alt="" class="image">
+          <img src="/WebsiteRestaurant/../service img/antaicho.png" alt="" class="image">
           <div class="content">
             <h1>Dịch vụ ăn uống tại chỗ</h1>
             <p>Thưởng thức món ăn ngon trong không gian hiện đại, ấm cúng với phong cách phục vụ chuyên nghiệp.</p>
@@ -41,7 +41,7 @@
 
       <div class="section-wrapper bg-white">
         <div class="container">
-          <img src="../service img/giaohang.png" alt="" class="image">
+          <img src="/WebsiteRestaurant/../service img/giaohang.png" alt="" class="image">
           <div class="content">
             <h1>Dịch vụ giao hàng tận nơi</h1>
             <p>Chúng tôi giao hàng nhanh chóng, đảm bảo món ăn nóng hổi và đúng giờ.</p>
@@ -56,7 +56,7 @@
 
       <div class="section-wrapper bg-gray"> 
         <div class="container">
-            <img src="../service img/combo.png" alt="" class="image">
+            <img src="/WebsiteRestaurant/../service img/combo.png" alt="" class="image">
             <div class="content">
                 <h1>Combo món ăn</h1>
                 <p>Tiết kiệm và tiện lợi với các gói combo hấp dẫn.</p>
@@ -74,7 +74,7 @@
 
        <div class="section-wrapper bg-white">
             <div class="container">
-                <img src="../service img/khuyenmai.png" alt="" class="image">
+                <img src="/WebsiteRestaurant/../service img/khuyenmai.png" alt="" class="image">
                 <div class="content">
                 <h1>Khuyến mãi hiện tại</h1>
                 <ul>
