--- a/new/web/web1.html
+++ b/new/web/web1.html
@@ -29,7 +29,7 @@
 
     <div class="container">
         <h1>Khai trương chi nhánh</h1>
-        <img src="/WebsiteRestaurant/../image/khai trương.png" alt="khaitruong">
+        <img src="/WebsiteRestaurant/new/image/khai trương.png" alt="khaitruong">
         <p>
             Hotpot Restaurant Mở Chi Nhánh Mới Tại Quận 7!
         </p>
