--- a/new/web/web2.html
+++ b/new/web/web2.html
@@ -29,7 +29,7 @@
     
     <div class="container">
         <h1> Ra mắt menu hoặc món lẩu mới</h1>
-        <img src="/WebsiteRestaurant/../image/menu.png" alt="menu">
+        <img src="/WebsiteRestaurant/new/image/menu.png" alt="menu">
         <p>
             Thưởng Thức Menu Lẩu Mới Tại Hotpot Restaurant
         </p>
