--- a/new/web/web4.html
+++ b/new/web/web4.html
@@ -29,7 +29,7 @@
 
     <div class="container">
         <h1>Ưu đãi</h1>
-        <img src="/WebsiteRestaurant/../image/ưu đãi.png" alt="nuocuong">
+        <img src="/WebsiteRestaurant/new/image/ưu đãi.png" alt="nuocuong">
         <p>
             Ưu Đãi 20% Cho Tất Cả Các Món Lẩu Trong Tháng Này!
         </p>
