--- a/service/service web/service.html
+++ b/service/service web/service.html
@@ -26,7 +26,7 @@
 
     <div class="section-wrapper bg-gray">
         <div class="container">
-          <img src="/WebsiteRestaurant/../service img/antaicho.png" alt="" class="image">
+          <img src="/WebsiteRestaurant/service/service img/antaicho.png" alt="" class="image">
           <div class="content">
             <h1>Dịch vụ ăn uống tại chỗ</h1>
             <p>Thưởng thức món ăn ngon trong không gian hiện đại, ấm cúng với phong cách phục vụ chuyên nghiệp.</p>
@@ -41,7 +41,7 @@
 
       <div class="section-wrapper bg-white">
         <div class="container">
-          <img src="/WebsiteRestaurant/../service img/giaohang.png" alt="" class="image">
+          <img src="/WebsiteRestaurant/service/service img/giaohang.png" alt="" class="image">
           <div class="content">
             <h1>Dịch vụ giao hàng tận nơi</h1>
             <p>Chúng tôi giao hàng nhanh chóng, đảm bảo món ăn nóng hổi và đúng giờ.</p>
@@ -56,7 +56,7 @@
 
       <div class="section-wrapper bg-gray"> 
         <div class="container">
-            <img src="/WebsiteRestaurant/../service img/combo.png" alt="" class="image">
+            <img src="/WebsiteRestaurant/service/service img/combo.png" alt="" class="image">
             <div class="content">
                 <h1>Combo món ăn</h1>
                 <p>Tiết kiệm và tiện lợi với các gói combo hấp dẫn.</p>
@@ -74,7 +74,7 @@
 
        <div class="section-wrapper bg-white">
             <div class="container">
-                <img src="/WebsiteRestaurant/../service img/khuyenmai.png" alt="" class="image">
+                <img src="/WebsiteRestaurant/service/service img/khuyenmai.png" alt="" class="image">
                 <div class="content">
                 <h1>Khuyến mãi hiện tại</h1>
                 <ul>
