--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 Sự hòa quyện đậm đà của các nguyên liệu từ nhiều loại cá,
                 thịt và rau đã tạo nên một hương vị khó quên trong lòng người.
             </p>
-            <button class="order"><a href="/menu/sanphammoi.html#laumam">Xem thêm</a></button>
+            <button class="order"><a href="/WebsiteRestaurant/menu/sanphammoi.html#laumam">Xem thêm</a></button>
         </div>
         <div class="main-image">
             <img src="/WebsiteRestaurant/images/110724-lau-mam-mien-tay-cung-buffet-poseidon-1-1.jpg" alt="Lẩu mắm" height="600px">
